# Finanace-manager

./: CONTRIBUTING.md  Dockerfile  README.md  app.py  build_cpp.py  docker-compose.yml  main.py  pyproject.toml  replit.nix
cpp/: CMakeLists.txt
data/: transactions.csv
data/models/: expense_predictor.joblib  savings_predictor.joblib
src/cpp/: finance.cpp  finance.h
src/python/: models.py  utils.py  visualization.py
static/css/: styles.css
static/js/: charts.js
templates/: dashboard.html  index.html  layout.html  transactions.html
